--- a/To Do List/1.css
+++ b/To Do List/1.css
@@ -50,6 +50,8 @@ button {
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 25px;
+    display: flex;
+    align-items: center;
 }
 
 .checkbox {
@@ -60,6 +62,10 @@ button {
     border: 2px solid red;
     border-radius: 0px;
     cursor: pointer;
+    color: #202124;
+    font-size: 40px;
+    display: flex;
+    align-items: center;
 }
 
 .task {
