--- a/Portfolio/exp.css
+++ b/Portfolio/exp.css
@@ -21,8 +21,7 @@
     height: 100%;
     z-index: -1;
 }
-
-.top{
+.top {
     top: 5vh;
     height: 15vh;
     width: 100%;
@@ -32,6 +31,16 @@
     font-size: 30px;
 }
 
+@media screen and (max-width: 650px) {
+    table {
+        font-size: 8px;
+    }
+
+    th,
+    td {
+        padding: 5px;
+    }
+}
 .container {
     margin-top: 20vh;
     display: flex;
@@ -39,46 +48,24 @@
     justify-content: center;
     align-items: center;
 }
-
-#contactForm{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+table {
+    border-spacing: 5px;
+    width: 80%;
 }
 
-#contactForm>div{
-    width: 50%;
-    margin: 1vh;
-}
 
-.grey{
-    color: #a4a3a3;
-    font-size: 25px;
-}
-
-.bg{
-    background-color: #000000;
-    color:white;
-    height: 40px;
-    font-size: 20px;
-    border: 2px solid #a4a3a3;
-    width: 100%;
-}
-
-.bg1{
+td {
     background-image: url('bg1.png');
-    color:white;
-    height: 40px;
-    font-size: 20px;
-    border: 2px solid #a4a3a3;
-    width: 100%;
+    border: 2px solid black;
+    border-radius: 2px;
+    padding: 5px;
+    text-align: center;
 }
 
-div#submit_reset{
-    margin-top: 50px;
-}
-
-#submit_reset>div{
-    margin-top: 3vh;
+th {
+    background-color: #2b2b2b;
+    border: 2px solid black;
+    border-radius: 2px;
+    padding: 5px;
+    text-align: center;
 }
