--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -94,8 +94,12 @@
     bottom: 0;
     left: 0;
     right: 0;
+    /* margin: auto; */
 }
 
 .link {
     text-decoration: none;
+}
+.text{
+    padding-top:10px;
 }
