--- a/Portfolio/exp.css
+++ b/Portfolio/exp.css
@@ -69,3 +69,15 @@ th {
     padding: 5px;
     text-align: center;
 }
+
+.top1 {
+    /* top: 10vh; */
+    height: 15vh;
+    width: 100%;
+    display: flex;
+    position: static;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    font-size: 20px;
+}
