--- a/Portfolio/2.css
+++ b/Portfolio/2.css
@@ -113,6 +113,13 @@ th {
     align-items: center;
 }
 
+.container2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .top3 {
     margin-top: 10vh;
     height: 5vh;
@@ -131,4 +138,8 @@ th {
 
 .link {
     text-decoration: none;
+}
+
+.container2 table tbody tr :hover {
+    background-image: url('bg2.png');
 }
