--- a/Portfolio/1.css
+++ b/Portfolio/1.css
@@ -93,7 +93,7 @@
     padding-left: 10px;
     background-color: rgba(0, 0, 0, 0.491);
     width: 55vw;
-    height: fit-content;
+    height: 55vh;
     padding: 5%;
     margin: 4%;
     font-weight: bold;
