--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -53,6 +53,7 @@
     margin: 0.5%;
     align-items: center;
     justify-content: center;
+    height: fit-content;
 }
 
 
@@ -76,6 +77,7 @@
 @media only screen and (max-width: 1000px) {
     .container {
         min-width: 40vh;
+        font-size: 20px;
     }
 
     .chotacontainer>a>div {
